Refactor handling of results using optionals instead of null values